using UnityEngine;

public class AssemblyPieceData : ScriptableObject
{
    [Tooltip("The prefab that is specific to this piece.")]
    public GameObject prefab;
    public int movementDistance;
    public int cost;
    public AssemblyPieceType type;
    public Facing facing;

    public void SetFacing(Facing facing)
    {
        this.facing = facing;
    }
}
