using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public enum AssemblyPieceType
{
    ConveyerBelt = 10,
    Cannon = 20,
}
